# RetardBench

./: .env.example  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml
.antigravity/: knowledge.md
app/: globals.css
app/blog/: page.tsx
app/contact/: page.tsx
app/contribute/: page.tsx
app/features/: page.tsx
app/leaderboard/: page.tsx
backend/: README.md  deps.py  main.py  requirements.txt
backend/prompts/: custom-retarded.jsonl
backend/routes/: eval.py  leaderboard.py  submit.py
backend/scripts/: generate_prompts.py
backend/tests/: conftest.py  test_evaluator.py
components/: LeaderboardTable.tsx  ParallaxHero.tsx  SiteFooter.tsx  SiteHeader.tsx
components/sections/: FAQSection.tsx  FeatureBlock.tsx  FeatureGrid.tsx  LeaderboardTeaser.tsx  StepsSection.tsx
content/: site.ts
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  GETTING_STARTED.md  PROMPT_DATASET.md  PROVIDERS.md  README.md  SCORING_METHODOLOGY.md
docs/examples/: basic_evaluation.py
examples/: api_client.py  curl_examples.sh  custom_prompts.py  javascript_client.js
frontend/: css-variables.json  package-lock.json  package.json  tailwind-custom-data.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: SiteFooter.tsx  SiteHeader.tsx  ThemeToggle.tsx
lib/: api.ts
prompts/: custom-retarded.jsonl  jbb-sample.jsonl
retardbench/: .gitignore  LICENSE  README.md
scripts/: curate_dataset.py
src/: cli.py
tests/: test_evaluator.py
(+68 files in other folders)
