[project]
name = "retardbench"
version = "0.1.0"
description = "Open benchmark leaderboard for chaotic LLM compliance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "tqdm>=4.66.5",
  "datasets>=2.21.0",
  "sqlalchemy>=2.0.35",
  "aiosqlite>=0.20.0",
  "typer>=0.12.4",
  "orjson>=3.10.7",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
retardbench = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]
